Create and style the article data section

--- a/index.html
+++ b/index.html
@@ -45,7 +45,23 @@
     </nav>
   </section>
 
+  <main>
+    <article>
+      <section id="article-header">
+        <div id="headline">Trump calls for limiting asylum claims at border as he pushes immigration issue ahead of midterms</div>
+        <div id="publish-data">
+          <span id="author">David Jackson</span>,
+          <p id="article-org">USA TODAY</p>
+          <p id="pub-date">Published 11:16 a.m. ET Nov. 1, 2018</p>
+          <p id="updated-date"> | Updated 4:28 p.m. ET Nov. 1, 2018</p>
+        </div>
+      </section>
 
+      <section id="article-content">
+        
+      </section>
+    </article>
+  </main>
 
   <!-- jQuery Slim (Can replace with full version) -->
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
