Style the image and article text

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 </head>
 
 <body>
+  <div id="black-bars"></div>
   <section id="navbar">
     <nav>
       <ul>
@@ -58,7 +59,30 @@
       </section>
 
       <section id="article-content">
-        
+        <div class="container-fluid">
+          <div class="row">
+            <div class="col-sm-8">
+              <div id="article-image">
+                <img src="assets/img/article-image.jpg" alt="Article featured image">
+                <p>(Photo: Photo courtesy Steve West via stevewest4missouri.com)</p>
+              </div>
+
+              <div id="article-text">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur blanditiis laboriosam tempore atque nobis commodi temporibus eos, facere minima ea officiis ratione quam cupiditate vel incidunt alias, corporis accusamus nisi.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur blanditiis laboriosam tempore atque nobis commodi temporibus eos, facere minima ea officiis ratione quam cupiditate vel incidunt alias, corporis accusamus nisi.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur blanditiis laboriosam tempore atque nobis commodi temporibus eos, facere minima ea officiis ratione quam cupiditate vel incidunt alias, corporis accusamus nisi.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur blanditiis laboriosam tempore atque nobis commodi temporibus eos, facere minima ea officiis ratione quam cupiditate vel incidunt alias, corporis accusamus nisi.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur blanditiis laboriosam tempore atque nobis commodi temporibus eos, facere minima ea officiis ratione quam cupiditate vel incidunt alias, corporis accusamus nisi.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur blanditiis laboriosam tempore atque nobis commodi temporibus eos, facere minima ea officiis ratione quam cupiditate vel incidunt alias, corporis accusamus nisi.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur blanditiis laboriosam tempore atque nobis commodi temporibus eos, facere minima ea officiis ratione quam cupiditate vel incidunt alias, corporis accusamus nisi.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur blanditiis laboriosam tempore atque nobis commodi temporibus eos, facere minima ea officiis ratione quam cupiditate vel incidunt alias, corporis accusamus nisi.</p>
+              </div>
+            </div>
+            <div class="col-sm-4">
+              Sidebar
+            </div>
+          </div>
+        </div>
       </section>
     </article>
   </main>
