Add the social icons to the article

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
   </section>
 
   <main>
+
     <article>
       <section id="article-header">
         <div id="headline">Trump calls for limiting asylum claims at border as he pushes immigration issue ahead of midterms</div>
@@ -65,7 +66,18 @@
               <div id="article-image">
                 <img src="assets/img/article-image.jpg" alt="Article featured image">
                 <p>(Photo: Photo courtesy Steve West via stevewest4missouri.com)</p>
-              </div>
+              </div><!-- article-image -->
+
+              <div id="article-social">
+                <ul>
+                  <li class="facebook"><img src="assets/img/facebook.png" alt="facebook logo">Connect</li>
+                  <li class="twitter"><img src="assets/img/twitter.png" alt="Twitter logo">Tweet</li>
+                  <li class="linkedin"><img src="assets/img/linkedin.png" alt="LinkedIn logo">LinkedIn</li>
+                  <li><img src="assets/img/comment.png" alt="Comment logo">Comment</li>
+                  <li><img src="assets/img/email.png" alt="Email logo">Email</li>
+                  <li><img src="assets/img/share.png" alt="More logo">More</li>
+                </ul>
+              </div><!-- article-social -->
 
               <div id="article-text">
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur blanditiis laboriosam tempore atque nobis commodi temporibus eos, facere minima ea officiis ratione quam cupiditate vel incidunt alias, corporis accusamus nisi.</p>
@@ -76,13 +88,23 @@
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur blanditiis laboriosam tempore atque nobis commodi temporibus eos, facere minima ea officiis ratione quam cupiditate vel incidunt alias, corporis accusamus nisi.</p>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur blanditiis laboriosam tempore atque nobis commodi temporibus eos, facere minima ea officiis ratione quam cupiditate vel incidunt alias, corporis accusamus nisi.</p>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur blanditiis laboriosam tempore atque nobis commodi temporibus eos, facere minima ea officiis ratione quam cupiditate vel incidunt alias, corporis accusamus nisi.</p>
-              </div>
-            </div>
+              </div><!-- article-text -->
+              <div id="article-social" class="bottom">
+                <ul>
+                  <li class="facebook"><img src="assets/img/facebook.png" alt="facebook logo">Connect</li>
+                  <li class="twitter"><img src="assets/img/twitter.png" alt="Twitter logo">Tweet</li>
+                  <li class="linkedin"><img src="assets/img/linkedin.png" alt="LinkedIn logo">LinkedIn</li>
+                  <li><img src="assets/img/comment.png" alt="Comment logo">Comment</li>
+                  <li><img src="assets/img/email.png" alt="Email logo">Email</li>
+                  <li><img src="assets/img/share.png" alt="More logo">More</li>
+                </ul>
+              </div><!-- article-social -->
+            </div><!-- col -->
             <div class="col-sm-4">
               Sidebar
-            </div>
-          </div>
-        </div>
+            </div><!-- col -->
+          </div><!-- row --->
+        </div><!-- container-fluid -->
       </section>
     </article>
   </main>
