add the social sidebar

--- a/index.html
+++ b/index.html
@@ -47,7 +47,19 @@
   </section>
 
   <main>
-
+    <section id="social-sidebar">
+      <ul>
+        <li class="facebook"><img src="assets/img/facebook.png" alt="facebook logo"></li>
+        <li class="twitter"><img src="assets/img/twitter.png" alt="Twitter logo"></li>
+        <li class="linkedin"><img src="assets/img/linkedin.png" alt="LinkedIn logo"></li>
+        <li><img src="assets/img/comment.png" alt="Comment logo"></li>
+        <li><img src="assets/img/email.png" alt="Email logo"></li>
+      </ul>
+      <ul class="print">
+        <li class="space"></li>
+        <li class="print"><img src="assets/img/print.png" alt="Print logo"></li>
+      </ul>
+    </section>
     <article>
       <section id="article-header">
         <div id="headline">Trump calls for limiting asylum claims at border as he pushes immigration issue ahead of midterms</div>
