Add the masthead

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="assets/css/styles.css">
 
   <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Montserrat:700" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,700" rel="stylesheet">
 
 
 </head>
@@ -21,7 +21,12 @@
   <div id="black-bars"></div>
   <section id="navbar">
     <nav>
-      <ul>
+      <div id="masthead">
+        <img src="assets/img/nav-logo.png" alt="USA Today Logo">
+        <h4><span>Subscribe now</span><br>to get home delivery</h4>
+      </div>
+
+      <ul id="first">
         <li class="nav-logo">
           <img src="assets/img/nav-logo.png" alt="USA Today logo">
         </li>
@@ -40,8 +45,13 @@
         <li class="catagory elections hide">Elections 2018</li>
         <li class="catagory crosswords hide">Crosswords</li>
         <li class="catagory thanksgiving">Thanksgiving</li>
+        <li class="catagory thanksgiving">More</li>
+
         <li class="icon search"><img src="assets/img/icon-search.png" alt="Search Icon"></li>
         <li class="icon profile"><img src="assets/img/icon-profile.png" alt="Profile Icon"></li>
+      </ul>
+      <ul id="second">
+
       </ul>
     </nav>
   </section>
@@ -100,6 +110,9 @@
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur blanditiis laboriosam tempore atque nobis commodi temporibus eos, facere minima ea officiis ratione quam cupiditate vel incidunt alias, corporis accusamus nisi.</p>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur blanditiis laboriosam tempore atque nobis commodi temporibus eos, facere minima ea officiis ratione quam cupiditate vel incidunt alias, corporis accusamus nisi.</p>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur blanditiis laboriosam tempore atque nobis commodi temporibus eos, facere minima ea officiis ratione quam cupiditate vel incidunt alias, corporis accusamus nisi.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur blanditiis laboriosam tempore atque nobis commodi temporibus eos, facere minima ea officiis ratione quam cupiditate vel incidunt alias, corporis accusamus nisi.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur blanditiis laboriosam tempore atque nobis commodi temporibus eos, facere minima ea officiis ratione quam cupiditate vel incidunt alias, corporis accusamus nisi.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur blanditiis laboriosam tempore atque nobis commodi temporibus eos, facere minima ea officiis ratione quam cupiditate vel incidunt alias, corporis accusamus nisi.</p>
               </div><!-- article-text -->
               <div id="article-social" class="bottom">
                 <ul>
@@ -127,5 +140,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
   <!-- Boostrap 4 js -->
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+  <!-- Custom js -->
+  <script src="assets/js/main.js"></script>
 </body>
 </html>
