Correct the offsets

--- a/index.html
+++ b/index.html
@@ -13,8 +13,6 @@
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,700" rel="stylesheet">
-
-
 </head>
 
 <body>
@@ -26,33 +24,32 @@
         <h4><span>Subscribe now</span><br>to get home delivery</h4>
       </div>
 
-      <ul id="first">
-        <li class="nav-logo">
-          <img src="assets/img/nav-logo.png" alt="USA Today logo">
-        </li>
-        <li class="catagory news">News</li>
-        <li class="catagory sports">Sports</li>
-        <li class="catagory life">Life</li>
-        <li class="catagory money">Money</li>
-        <li class="catagory tech">Tech</li>
-        <li class="catagory travel">Travel</li>
-        <li class="catagory opinion">Opinion</li>
-        <li class="catagory weather">
-          <img src="assets/img/weather.png" alt="Weather icon">
-          75&#176;
-        </li>
-        <li class="catagory investigations">Investigations</li>
-        <li class="catagory elections hide">Elections 2018</li>
-        <li class="catagory crosswords hide">Crosswords</li>
-        <li class="catagory thanksgiving">Thanksgiving</li>
-        <li class="catagory thanksgiving">More</li>
+      <div id="nav-wrapper">
+        <ul>
+          <li class="nav-logo">
+            <img src="assets/img/nav-logo.png" alt="USA Today logo">
+          </li>
+          <li class="catagory news">News</li>
+          <li class="catagory sports">Sports</li>
+          <li class="catagory life">Life</li>
+          <li class="catagory money">Money</li>
+          <li class="catagory tech">Tech</li>
+          <li class="catagory travel">Travel</li>
+          <li class="catagory opinion">Opinion</li>
+          <li class="catagory weather">
+            <img src="assets/img/weather.png" alt="Weather icon">
+            75&#176;
+          </li>
+          <li class="catagory investigations">Investigations</li>
+          <li class="catagory elections hide">Elections 2018</li>
+          <li class="catagory crosswords hide">Crosswords</li>
+          <li class="catagory thanksgiving">Thanksgiving</li>
+          <li class="catagory thanksgiving">More</li>
 
-        <li class="icon search"><img src="assets/img/icon-search.png" alt="Search Icon"></li>
-        <li class="icon profile"><img src="assets/img/icon-profile.png" alt="Profile Icon"></li>
-      </ul>
-      <ul id="second">
-
-      </ul>
+          <li class="icon search"><img src="assets/img/icon-search.png" alt="Search Icon"></li>
+          <li class="icon profile"><img src="assets/img/icon-profile.png" alt="Profile Icon"></li>
+        </ul>
+      </div>
     </nav>
   </section>
 
