Add USA today EYP page

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <h2>USA Today Articles</h2>
 <ul>
   <li><a href="usa-today.php">No EYP</a></li>
+  <li><a href="usa-today-eyp.php">No EYP</a></li>
 </ul>
 
 
